--- a/srcs/containers/frontend/volume-frontend/public/index.html
+++ b/srcs/containers/frontend/volume-frontend/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <html lang="en">
-    <script src="./index.js">
+    <script src="/app/volume-frontend/index.js">
     </script>
 </html>
