empezando la comunicacion front-back

--- a/srcs/containers/frontend/volume-frontend/public/index.html
+++ b/srcs/containers/frontend/volume-frontend/public/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="en">
-    <script src="/app/volume-frontend/index.js">
-    </script>
+    <head>
+        <title>Volume Frontend</title>
+    </head>
+    <body>
+        <script src="./volume-frontend/index.js">
+        </script>
+    </body> 
 </html>
