anyadiendo container de proxy

--- a/srcs/containers/frontend/volume-frontend/public/index.html
+++ b/srcs/containers/frontend/volume-frontend/public/index.html
@@ -4,7 +4,7 @@
         <title>Volume Frontend</title>
     </head>
     <body>
-        <script src="./volume-frontend/index.js">
+        <script src="./index.js">
         </script>
     </body> 
 </html>
