--- a/srcs/containers/frontend/volume-frontend/public/index.html
+++ b/srcs/containers/frontend/volume-frontend/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Volume Frontend</title>
+        <title>Camagru Website</title>
     </head>
     <body>
         <script src="/index.js">
