--- a/srcs/containers/frontend/volume-frontend/public/index.html
+++ b/srcs/containers/frontend/volume-frontend/public/index.html
@@ -4,7 +4,7 @@
         <title>Camagru Website</title>
     </head>
     <body>
-        <script src="/index.js">
+        <script type="module" src="/index.js">
         </script>
     </body> 
 </html>
